[chore] Refactor on MappingProcessor